<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/goblin_one"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView11"
            android:textColor="#7d7c7c"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:text="@string/please_sign_up_to_continue" />

        <EditText
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"
            android:id="@+id/editTextTextEmailAddress2"
            android:paddingHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:layout_margin="5dp"
            android:layout_below="@id/textView10"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_baseline_mail_outline_24"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_below="@id/editTextTextEmailAddress2">

            <EditText
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                android:id="@+id/editTextTextPassword2"
                android:paddingStart="10dp"
                android:paddingEnd="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:drawableStart="@drawable/ic_baseline_lock_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button1"
            android:onClick="signIn"
            android:background="@drawable/background"
            android:textColor="@android:color/white"
            android:paddingHorizontal="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/constraintLayout1"
            android:layout_alignParentEnd="true"
            android:text="@string/sign_up_button"
            android:layout_margin="20dp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account1"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:onClick="login"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>